src/tests/testfiles/binary-operators/17.txt
testfiles/binary-operators/17.c:2:5: error: invalid operands to binary '*' (have 'int' and 'char *')
54 * "a";
^
